# autosized_num

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: basic.rs
