[package]
name = "autosized-num"
version = "0.1.1"
edition = "2024"
authors = ["Yua"]
description = "Auto-sized integer macros: choose the smallest signed/unsigned type for a literal at compile time."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yua134/autosized_num"
readme = "README.md"
exclude = [
    ".gitignore",
    ".github/*",
    "target/*",
    "about.toml",
    "about.hbs",
]
categories = ["development-tools", "no-std"]
keywords = ["proc-macro", "integer", "auto-size", "numeric", "no_std"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "^1.0.40"
syn = "2.0.106"

[dev-dependencies]
static_assertions = "1.1.0"